# peekr

./: .gitignore  README.md  pyproject.toml  requirements.txt
peekr/: __main__.py  peekr.py
