[project]
name = "peekr"
version = "0.1.0"
description = "A Python tool to perform Optical Character Recognition (OCR) in a directory of images and search for specific text or phrases within the extracted text."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filetype>=1.2.0",
    "opencv-python>=4.12.0.88",
    "pytesseract>=0.3.13",
]
